# FastStencil-SC26

./: .gitmodules  README.md  problem_size.csv
2dstencil/: CMakeLists.txt
2dstencil/include/: defines.h  logger.hpp
2dstencil/include/FastStencil/: kernels.cuh  memory-helper.cuh  params.cuh
2dstencil/include/SpatialTiling/: params.cuh
2dstencil/lib/: FastStencil.cu  SpatialTiling.cu  utils.cu
2dstencil/src/: perf.cpp
3dstencil/include/: defines.h
3dstencil/include/FastStencil/: kernels.cuh  memory-helper.cuh  params.cuh
3dstencil/include/SpatialTiling/: params.cuh
3dstencil/lib/: FastStencil.cu  SpatialTiling.cu
3dstencil/src/: perf.cpp
script/: analyze_data.py  build.sh  ncu2csv.py  perf.py  plot-tflops.py
