cmake_minimum_required(VERSION 3.25)
set(CMAKE_CXX_STANDARD 20)
if(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
    set(CMAKE_CUDA_ARCHITECTURES native)
    message(STATUS "CMAKE_CUDA_ARCHITECTURES not specified, using 'native'")
else()
    message(STATUS "Using user-specified CMAKE_CUDA_ARCHITECTURES: ${CMAKE_CUDA_ARCHITECTURES}")
endif()
project(stencilBenchmark VERSION 1.0.0.0 LANGUAGES CXX CUDA)
find_package(OpenMP REQUIRED)
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -march=native")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -lineinfo -Xptxas -v")
set(CMAKE_CUDA_USE_RESPONSE_FILE_FOR_INCLUDES OFF)
set(CMAKE_CUDA_USE_RESPONSE_FILE_FOR_LIBRARIES OFF)
set(CMAKE_CUDA_USE_RESPONSE_FILE_FOR_OBJECTS OFF)

function(add_lib target_name)
	add_library(${target_name} SHARED ${ARGN})
	target_include_directories(${target_name} PUBLIC ${CMAKE_SOURCE_DIR}/include)
endfunction()

function(add_perf_executable lib_name perf_func)
	set(target_name ${lib_name}_perf)
	add_executable(${target_name} src/perf.cpp)
	target_compile_definitions(${target_name} PRIVATE PERF_FUNC=${perf_func})
	target_link_libraries(${target_name} PRIVATE utils ${lib_name})
endfunction()

add_lib(utils lib/utils.cu)

add_lib(FastStencil lib/FastStencil.cu)
add_perf_executable(FastStencil FastStencil)

add_lib(FastStencil_NT lib/FastStencil.cu)
target_compile_definitions(FastStencil_NT PUBLIC DISABLE_TEMPORAL_TILING)
add_perf_executable(FastStencil_NT FastStencil)

add_lib(SpatialTiling lib/SpatialTiling.cu)
add_perf_executable(SpatialTiling SpatialTiling)
